--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue2" src="img/landing/mobile/sektion2/mb-bw-baggrund.jpg" alt="">
-                <img class="img-fluid bg-img-vertical align-self-center position position-absolute img-scroll2" src="img/landing/sektion2/forgrund.jpg" alt="">
+                <img class="img-fluid bg-img-vertical align-self-center position2 position-absolute img-scroll2" src="img/landing/sektion2/forgrund.jpg" alt="">
 
             </div>
         </div>
@@ -73,7 +73,7 @@
                 </div>
 
                 <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue3" src="img/landing/sektion3/bw-baggrund.jpg" alt="">
-                <img class="img-fluid bg-img-vertical align-self-center position position-absolute img-scroll3" src="img/landing/sektion3/forgrund.jpg" alt="">
+                <img class="img-fluid bg-img-vertical align-self-center position3 position-absolute img-scroll3" src="img/landing/sektion3/forgrund.jpg" alt="">
 
             </div>
         </div>
@@ -87,7 +87,7 @@
                 </div>
 
                 <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue4" src="img/landing/mobile/sektion4/bw-baggrund.png" alt="">
-                <img class="img-fluid bg-img-vertical align-self-center position position-absolute img-scroll4" src="img/landing/sektion4/forgrund.jpg" alt="">
+                <img class="img-fluid bg-img-vertical align-self-center position4 position-absolute img-scroll4" src="img/landing/sektion4/forgrund.jpg" alt="">
 
             </div>
         </div>
@@ -103,7 +103,7 @@
                 </div>
 
                 <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue5" src="img/landing/sektion5/bw-baggrund.jpg" alt="">
-                <img class="img-fluid bg-img-vertical align-self-center position position-absolute img-scroll5" src="img/landing/sektion5/forgrund.jpg" alt="">
+                <img class="img-fluid bg-img-vertical align-self-center position5 position-absolute img-scroll5" src="img/landing/sektion5/forgrund.jpg" alt="">
 
             </div>
         </div>
@@ -175,7 +175,7 @@
         });
 
         gsap.from(".img-scroll2", {
-            y: 200,
+            y: 150,
 
             duration: 1,
 
@@ -192,7 +192,7 @@
         });
 
         gsap.from(".img-scroll3", {
-            y: 200,
+            y: 150,
 
             duration: 1,
 
@@ -209,7 +209,7 @@
         });
 
         gsap.from(".img-scroll4", {
-            y: 200,
+            y: 150,
 
             duration: 1,
 
@@ -321,9 +321,6 @@
         });
 
         /*GREYSCALE-CHANGE-SLUT*/
-
     </script>
     <!--    <script src="js/scripts.js"></script>-->
-</body>
-
-</html>
+</body></html>
