--- a/index.html
+++ b/index.html
@@ -26,10 +26,28 @@
         </div>
     </section>
 
+    <section class="section1 mb-5">
+        <div class="container-fluid p-md-5">
+            <div class="row justify-content-between p-0 ">
+                <div class="copy col-md-8">
+                    <h2 class="heading">GROW IT</h2>
+                    <p class="trigger">You need clothing and we want you to have it. But not at any cost anymore. You have changed that. You and your generation have pushed us to look inwards and you demand that we change. For the better of the world. So we will try our best to live up to you. That is why we have come up with GROW IT. A bag of seeds to be planted anywhere that become plants which increase biodiversity.<br><br>
+                        We want you on the journey with us. It’s very simple. Plant it, picture it, tag it, repeat. Fulfill missions and earn rewards. For every 1000 #growit seeds planted and tagged we donate 10.000 pounds to our sustainable research facility.<br><br>
+                        <span class="bold">THANK YOU</span> for changing us.
+                    </p>
+                </div>
+                <div class="position-relative">
+                    <img class="col-md-8 img-fluid bg-img-vertical align-self-center   hue1" src="annie-spratt-jsHjYUEL1o0-unsplash.jpg" alt=""></div>
+                <img class=" col-md-4img-fluid bg-img-vertical align-self-center position-bag position-absolute  img-scroll1" src="img/landing/splash/bag_noshadow.png" alt="">
+
+            </div>
+        </div>
+    </section>
+
 
     <section class="section1 mb-5">
         <div class="container-fluid p-md-5">
-            <div class="row justify-content-between p-0">
+            <div class="row justify-content-between p-0 ">
                 <div class="copy col-md-8">
                     <h2 class="heading">GROW IT</h2>
                     <p class="trigger">You need clothing and we want you to have it. But not at any cost anymore. You have changed that. You and your generation have pushed us to look inwards and you demand that we change. For the better of the world. So we will try our best to live up to you. That is why we have come up with GROW IT. A bag of seeds to be planted anywhere that become plants which increase biodiversity.<br><br>
@@ -38,8 +56,8 @@
                     </p>
                 </div>
 
-                <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue1" src="annie-spratt-jsHjYUEL1o0-unsplash.jpg" alt="">
-                <img class="img-fluid bg-img-vertical align-self-center position-bag position-absolute img-scroll1" src="bag.png" alt="">
+                <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative  hue1" src="annie-spratt-jsHjYUEL1o0-unsplash.jpg" alt="">
+                <img class="img-fluid bg-img-vertical align-self-center position-bag position-absolute img-scroll1" src="img/landing/splash/bag_noshadow.png" alt="">
 
             </div>
         </div>
@@ -157,12 +175,12 @@
 
 
         /*POSITION-SCROLL-START*/
-        gsap.from(".img-scroll1", {
-            y: 200,
+                gsap.from(".img-scroll1", {
+                y: 200,
 
-            duration: 1,
+                duration: 1,
 
-            scrollTrigger: {
+                scrollTrigger: {
                 trigger: ".img-scroll1",
                 ease: "power2.inOut",
 
@@ -171,8 +189,8 @@
                 end: "center 40%",
                 scrub: true,
 
-            }
-        });
+                }
+                });
 
         gsap.from(".img-scroll2", {
             y: 150,
@@ -321,6 +339,9 @@
         });
 
         /*GREYSCALE-CHANGE-SLUT*/
+
     </script>
     <!--    <script src="js/scripts.js"></script>-->
-</body></html>
+</body>
+
+</html>
