--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
     </section>
 
     <section class="section1 mb-5">
-        <div class="container-fluid p-md-5">
+        <div class="container-fluid">
             <div class="row justify-content-between p-0 ">
-                <div class="copy col-md-8">
+                <div class="copy  col-lg-8">
                     <h2 class="heading">GROW IT</h2>
                     <p class="trigger">You need clothing and we want you to have it. But not at any cost anymore. You have changed that. You and your generation have pushed us to look inwards and you demand that we change. For the better of the world. So we will try our best to live up to you. That is why we have come up with GROW IT. A bag of seeds to be planted anywhere that become plants which increase biodiversity.<br><br>
-                        We want you on the journey with us. It’s very simple. Plant it, picture it, tag it, repeat. Fulfill missions and earn rewards. For every 1000 #growit seeds planted and tagged we donate 10.000 pounds to our sustainable research facility.<br><br>
-                        <span class="bold">THANK YOU</span> for changing us.
+                        We want you on the journey with us. It’s very simple. Plant it, picture it, tag it, repeat. Fulfill missions and earn rewards. For every 1000 #growit seeds planted and tagged we donate 10.000 pounds to our sustainable research facility. <br><br>
+                        <span class="">Thank you</span> for changing us.
                     </p>
+                    <button type="button" class="btn btn-primary text-left">Follow The Movement <span class="arrow">&rarr;</span></button>
                 </div>
-                <div class="position-relative">
-                    <img class="col-md-8 img-fluid bg-img-vertical align-self-center   hue1" src="annie-spratt-jsHjYUEL1o0-unsplash.jpg" alt=""></div>
-                <img class=" col-md-4img-fluid bg-img-vertical align-self-center position-bag position-absolute  img-scroll1" src="img/landing/splash/bag_noshadow.png" alt="">
+
+                <img class=" col-lg-4 img-fluid bg-img-vertical align-self-center   hue1" src="annie-spratt-jsHjYUEL1o0-unsplash.jpg" alt="">
+                <img class=" img-fluid bg-img-vertical align-self-center position-bag position-absolute  img-scroll1" src="img/landing/splash/bag_noshadow.png" alt="">
 
             </div>
         </div>
@@ -67,13 +68,16 @@
 
     <section class="section2 mb-5">
         <div class="container-fluid p-md-5">
-            <div class="row justify-content-between p-0">
-                <div class="copy col-md-8">
-                    <p class="quote text-center mb-5">WE AIM TO<br> PUSH FOR A SUSTAINABLE FUTURE</p>
-                </div>
+            <div class="row align-items-lg-center justify-content-lg-center p-0 flex-wrap-reverse">
 
-                <div class="position-relative"> <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue2" src="img/landing/mobile/sektion2/mb-bw-baggrund.jpg" alt=""></div>
+
+                <img class="col-lg-4 d-lg-none img-fluid bg-img-vertical align-self-center  hue2" src="img/landing/mobile/sektion2/mb-bw-baggrund.jpg" alt="">
+                <img class="col-lg-8 d-none d-lg-block img-fluid bg-img-vertical align-self-center  hue2" src="img/landing/sektion2/bw-baggrund.jpg" alt="">
                 <img class="img-fluid bg-img-vertical align-self-center position2 position-absolute img-scroll2" src="img/landing/sektion2/forgrund.jpg" alt="">
+
+                <div class="copy col-lg-4">
+                    <p class="quote text-center text-lg-left mb-5 ">WE AIM TO<br> PUSH FOR A SUSTAINABLE FUTURE</p>
+                </div>
 
             </div>
         </div>
@@ -82,17 +86,19 @@
     <section class="section3 mb-3">
         <div class="container-fluid p-md-5">
             <div class="row justify-content-between p-0">
-                <div class="copy col-md-8">
+                <div class="copy col-lg-8">
                     <h2 class="heading">YOU CAN BE THE HERO</h2>
-                    <p class="trigger">Every hero needs a sidekick. Let us help you help us! For every 1000 #growit bags planted and tagged we donate 10.000 pounds to our sustainable research.
+                    <p class="trigger">Every hero needs a sidekick. Let us help you help us! For every 1000 #growit bags planted and tagged we donate 10.000 pounds to our sustainable research.<br><br>
 
-                        We have a vision. In 2030 we want our brand to be completely circular. In order to do that, we need to figure out how to make 100% of clothing waste in to new collections. We need to come up with new sustainable binding agents and rethink the use of fibres and textiles.
+                        We have a vision. In 2030 we want our brand to be completely circular. In order to do that, we need to figure out how to make 100% of clothing waste in to new collections. We need to come up with new sustainable binding agents and rethink the use of fibres and textiles.<br><br>
 
                         We make it. You wear it. Let us change it together.
                     </p>
+                    <button type="button" class="btn btn-primary">Primary</button>
                 </div>
 
-                <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue3" src="img/landing/sektion3/bw-baggrund.jpg" alt="">
+                <img class="col-lg-4 img-fluid bg-img-vertical align-self-center hue3" src="img/landing/sektion3/bw-baggrund.jpg" alt="">
+
                 <img class="img-fluid bg-img-vertical align-self-center position3 position-absolute img-scroll3" src="img/landing/sektion3/forgrund.jpg" alt="">
 
             </div>
@@ -101,28 +107,32 @@
 
     <section class="section4 mb-5">
         <div class="container-fluid p-md-5">
-            <div class="row justify-content-between p-0">
-                <div class="copy col-md-8">
-                    <p class="quote text-center mb-5">WE MAKE IT. <br>YOU WEAR IT. <br>LET’S CHANGE IT TOGETHER.</p>
+            <div class="row align-items-lg-center justify-content-between  p-0">
+                <img class="col-lg-8 d-none d-lg-block  img-fluid bg-img-vertical align-self-center  hue4" src="img/landing/sektion4/bw-baggrund.jpg" alt="">
+                <div class="copy col-lg-4">
+                    <p class="quote text-center text-lg-left mb-5">WE MAKE IT. <br>YOU WEAR IT. <br>LET’S CHANGE IT TOGETHER.</p>
                 </div>
 
-                <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue4" src="img/landing/mobile/sektion4/bw-baggrund.png" alt="">
+                <img class="col-lg-4 d-lg-none img-fluid bg-img-vertical align-self-center  hue4" src="img/landing/mobile/sektion4/bw-baggrund.png" alt="">
+
                 <img class="img-fluid bg-img-vertical align-self-center position4 position-absolute img-scroll4" src="img/landing/sektion4/forgrund.jpg" alt="">
 
             </div>
         </div>
     </section>
 
+
     <section class="section5 mb-3">
         <div class="container-fluid p-md-5">
             <div class="row justify-content-between p-0">
-                <div class="copy col-md-8">
+                <div class="copy col-lg-8">
                     <h2 class="heading">BECOME BRAND AMBASSADOR</h2>
-                    <p class="trigger">How cool would it be if hundreds of thousands from across the world started planting #growit? By becoming an ambassador you can inspire others to make a difference - and win rewards while being a hero. By completing missions you earn points which can be translated in to discounts and other goodies.
+                    <p class="trigger">How cool would it be if hundreds of thousands from across the world started planting #growit? By becoming an ambassador you can inspire others to make a difference - and win rewards while being a hero.<br><br> By completing missions you earn points which can be translated in to discounts and other goodies.
                     </p>
+                    <button type="button" class="btn btn-primary">Primary</button>
                 </div>
 
-                <img class="col-md-4 img-fluid bg-img-vertical align-self-center position-relative hue5" src="img/landing/sektion5/bw-baggrund.jpg" alt="">
+                <img class="col-lg-4 img-fluid bg-img-vertical align-self-center position-relative hue5" src="img/landing/sektion5/bw-baggrund.jpg" alt="">
                 <img class="img-fluid bg-img-vertical align-self-center position5 position-absolute img-scroll5" src="img/landing/sektion5/forgrund.jpg" alt="">
 
             </div>
@@ -178,7 +188,7 @@
 
         /*POSITION-SCROLL-START*/
         gsap.from(".img-scroll1", {
-            y: 200,
+            y: 500,
 
             duration: 1,
 
@@ -212,7 +222,7 @@
         });
 
         gsap.from(".img-scroll3", {
-            y: 150,
+            y: 500,
 
             duration: 1,
 
@@ -246,7 +256,7 @@
         });
 
         gsap.from(".img-scroll5", {
-            y: 200,
+            y: 500,
 
             duration: 1,
 
